--- a/bb.css
+++ b/bb.css
@@ -1,27 +1,12 @@
-h1{
-color:white;
-border:4 px;
-}
-
-
-.ff{
-padding:10px;
-padding-bottom:30px;
-padding-top:10px;
-color:white;
-font-size:20px;
-font-family: sans serif;
-}
-.body{
-font-family: Sans-Serif;
-font-size:8px;
-}
 
 .hh{
 border-bottom: 1px solid #00FF76;
-width:90%;
+width:88%;
 margin-top:0px;
-margin-left:25px;
+margin-left:15px;
+margin-right:0;
+display:flex;
+flex-wrap:wrap;
 }
 a:link
 {
@@ -31,46 +16,38 @@ color:yellow;
 .nav > li > a:hover{
    background-color: black;
  }
-.f{
-padding:5px;
-padding-bottom:0px;
-padding-top:1px;
-color:white;
 
-}
-.jj
-{
-padding:20px;
-padding-bottom:10px;
-padding-top:10px;
-color:white;
-font-size:30px;
-font-family:OpenSans-Light;
-margin-right:30px;
-}
+
 .expand_caret {
-    transform: scale(1.6);
-    color:#F8D229;
-   float:right;
-    margin-top: 8px;
-    margin-right: 2px;
-
+transform: scale(1.6);
+color:#F8D229;
+margin-top: 4px;
+margin-right:0px;
+float:right;
+align:right;
 }
+
+   
+   
 a[aria-expanded='true'] > .expand_caret {
     transform: scale(1.6) rotate(-180deg);
 }
 
 
 .cont {
-  height: 160px;
+ height:160px;
   width:100%;
-  padding: 5px 0;
+  padding: 0px 0;
   background: linear-gradient(6deg, #111010 55%, transparent 2%);
   display: flex;
+margin-left:0px;
+margin-right:0px;
+
+
 }
 .dv{
 
-background-image:url("bi.jpg");
+background-image:url("biii.jpg");
    opacity: 0.2;
 }
 .btn{
@@ -81,12 +58,70 @@ border-radius: 2px;
 font-size: 22px;
 font-weight: bold;
 }
-.m{
+
+.h
+{
+padding:5px;
+padding-bottom:10px;
+padding-top:2px;
+color:white;
+width:100%;
+margin-left:20px;
+margin-right:0px;
+
+}
+
+
+
+.jj
+{
 padding:2px;
 padding-bottom:0px;
 padding-top:0px;
-margin-top:0px;
+color:white;
+width:auto;
+font-size:12px;
+margin-right:2px;
+font-family:OpenSans-Light;
 }
-.pg{
-width:100%;
+@media only screen and (min-width: 600px) {
+.x
+{
+padding:5px;
+padding-bottom:10px;
+padding-top:5px;
+color:white;
+width:auto;
+font-size:5px;
+font-family:OpenSans-Light;
+margin-left:25px;
+}
+}
+
+@media only screen and (max-width: 600px) {
+.x
+{
+padding:0px;
+padding-bottom:5px;
+padding-top:5px;
+color:white;
+width:auto;
+font-size:15px;
+font-family:OpenSans-Light;
+margin-left:2px;
+}
+}
+
+@media only screen and (max-width: 600px) {
+.jj
+{
+padding:0px;
+padding-bottom:0px;
+padding-top:0px;
+color:white;
+width:auto;
+font-size:12px;
+font-family:OpenSans-Light;
+margin-left:0px;
+}
 }
